fixed columns issue on small screens

--- a/index.css
+++ b/index.css
@@ -82,6 +82,21 @@ h3 {
 	}
 }
 
+@media (min-width: 576px) {
+	.card-columns {
+		-webkit-column-count: 1;
+		-moz-column-count: 1;
+		column-count: 1;
+		-webkit-column-gap: 1.25rem;
+		-moz-column-gap: 1.25rem;
+		column-gap: 1.25rem;
+		orphans: 1;
+		widows: 1;
+	}
+}
+
+
+
 button {
 	z-index: 1;
 	color: white;
